--- a/style.css
+++ b/style.css
@@ -317,9 +317,16 @@ footer a:visited, footer a:link, footer a:active {
   width: 324px;
   height: 500px;
 }
+@media screen and (max-width: 320px) {
+  .card-more-info img {
+    width: 90vw;
+    height: auto;
+  }
+}
 @media screen and (max-width: 768px) {
   .card-more-info {
     flex-direction: column;
+    align-items: center;
   }
 }
 
